[package]
name = "escape-vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = "3.4.2"
nix = "0.27.1"
serde = { version = "1.0.196", features = ["derive"] }
